<resources>
    <string name="app_name">MySqlLogin</string>
    <string name="hintEmail">Enter Email</string>
    <string name="username">Enter User Name</string>
    <string name="password">Enter Passwrod</string>
    <string name="repassword">Re-type Password</string>
    <string name="already">already a member ?\nclick here to LogIn</string>
    <string name="notalready">New memeber?\nClick here to Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="book">Book Ride</string>
    <string name="cancle">Cancle Ride</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="user">User</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="accept">Accept</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="Map">Map</string>
    <string name="logout">LogOut</string>
    <string name="title_activity_payment">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="promo">Add promo</string>
    <string name="enterPromo">Do you want to enter promo</string>
    <string name="enter">Add promo</string>
    <string name="cancel">Cancel</string>
</resources>
